# musko_special

./: Agents.md  main.py  pyproject.toml
src/predator_cattle/: __init__.py  state.py  templates.py
templates/: coordinates_request.html  correct_code.html  home.html  video_player.html
