[project]
name = "predator-cattle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Erik Samuelsson", email = "erik.macallan.samuelsson@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "datastar-py>=0.8.0",
    "fastapi>=0.128.0",
    "minijinja>=2.14.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
